--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="header-right">
       <div class="wrapper">
         <a class="logo">WebmastersWeekly</a>
-        <a class="active" href="./homepage.html">Home</a>
+        <a class="active" href="./index.html">Home</a>
         <a href="./incentives-page.html">Incentives</a>
         <a href="./additional-info-page.html">Additional Info</a>
         <a href="./sources.html">Sources</a>
