--- a/additional-info-page.html
+++ b/additional-info-page.html
@@ -20,7 +20,7 @@
   <style type="text/css">
   
   body {
-    background-color: #ffffff;
+    background-color: #002500;
   } 
 
   </style>
@@ -30,7 +30,7 @@
 <body>
 
   <div class="header">
-    <img class="fullscreen" src="https://picsum.photos/id/1016/2000/1000" alt="Pretty Pic">
+    <img class="fullscreen" src="IMG_1060.jpg" alt="Pretty Pic">
     <div class="header-right">
       <div class="wrapper">
         <a class="logo">WebmastersWeekly</a>
@@ -45,43 +45,44 @@
 
   <main id="main">
     <section>
-      <div class="page-text">
+      <div class="text right">
+        <div class="heading-style-3">
+          <h2>The Costs</h2>
+        <div class="container">
+        <div class="paragraph-style-2">
+          <p>Solar power</p>
+          <p>Solar power presents an opportunity for homeowners to use clean, renewable energy while enjoying significant long-term savings.</p>
+        </div>
+        <img class="fullscreen" src="https://get.pxhere.com/photo/landscape-tree-nature-forest-grass-outdoor-wilderness-grungy-mountain-cloud-plant-wood-fog-mist-field-meadow-sunlight-morning-leaf-hill-mountain-range-smoke-dark-green-autumn-weather-haze-grunge-trees-hills-grey-fields-hazy-misty-woodland-habitat-ecosystem-rural-area-oudoors-natural-environment-geographical-feature-atmospheric-phenomenon-woody-plant-mountainous-landforms-959049.jpg" alt="Pretty Pic">
+        </div>
+        <div class="wrapper_para2">
+          <div class="heading-style-1">
+              <h2>For a standard residential solar panel system in the United States:</h2>
+          </div>
+          <div class="paragraph-style-1">
+            <p>Small System (2-4 kW) - upfront cost may range from $6,000 to $12,000</p>
+            <p>Medium System (5-7 kW) - upfront cost may range from $10,000 to $20,000</p>
+            <p>Large System (8-10 kW) - upfront cost may range from $16,000 to $30,000</p>
+            <p>Investing in solar energy makes you eligible for the Solar Investment Tax Credit (ITC) which provides 30% tax credit for photovoltaic installations. <a class="active" href="https://www.whitehouse.gov/cleanenergy/">whitehouse.gov</a></p> 
+            <p>Info about financial incentives and regulatory policies that apply to your home can be found here: <a class="active" href="https://www.dsireusa.org/">dsireusa.org</a></p> 
+          </div>
+        </div>
+        <div class="wrapper_para">
         <div class="heading-style-1">
-          <h2>What can you do to help?</h2>
+          <h2>Geothermal power</h2>
         </div>
-        <div class="paragraph-style-1">
-          <p>Ever wonder about how you can make a real impact on our environment? It’s time to take action and be part of the solution! Every effort counts towards fostering a sustainable and healthy planet.</p>
-          <p>Start by incorporating simple yet effective energy-saving habits into your daily routine:</p>
-          <li>turn off the lights when natural light is available</li>
-          <li>conserve water</li>
-          <li>unplug chargers when not in use and turn off all electrical appliances before going to bed</li>
-          <li>start gardening</li>
-          <li>change the thermostat temperature</li>
-          <li>replace windows and seal them</li>
-          <li>Rride a bike or switch to non-fossil-fuel-burning car</li>
-          <p>Small changes like these can make a big difference in reducing your carbon footprint and saving energy.</p>
-          <p>You can take bigger initiatives and consider trying these options:</p>
-          <p>Solar power - Solar panels capture sunlight to convert into energy. It can generate some or all of a home’s electricity needs. </p>
+          <div class="paragraph-style-1">
+            <p>The Federal Residential Renewable Energy Tax Credit currently offers a tax credit of about 30% of the total cost of installing a geothermal heat pump system for homeowners. This plays a crucial role in making these systems more accessible and cost-effective.</p>
+            <p>On average, the upfront cost of installing a geothermal heat pump system typically ranges from $10,000 to $30,000 for a residential property.</p> 
+            <p>While the upfront investment may seem steep, it's important to consider the long-term benefits.</p>
+            <p>Geothermal heat pumps are highly efficient and utilize the stable temperature of the Earth to provide heating in the winter and cooling in the summer. This results in lower operating costs compared to traditional HVAC systems. With proper maintenance, geothermal heat pumps can last for decades, further enhancing their value.</p>
+            <p>Additionally, homeowners may also qualify for state or local incentives, such as low-interest loans, further reducing the financial burden of installation. Beyond monetary savings, geothermal systems offer a more sustainable heating and cooling solution, reducing carbon emissions and lessening environmental impact. By leveraging available tax credits and incentives, homeowners can not only lower their energy bills but also contribute to a greener future while enjoying year-round comfort in their homes.</p>
+            <p>More information can be found on <a class="active" href="irs.gov">irs.gov</a></p>
         </div>
-         <div class="heading-style-1">
-          <h2>Why Choose Solar?</h2>
-        </div>
-        <div class="paragraph-style-1">
-          <li>Sustainability: Solar energy is abundant, clean, and renewable, making it a sustainable choice for powering your home or business.</li>
-          <li>Cost Savings: With solar panels, you can reduce or even eliminate your monthly electricity bills, saving you money in the long run.</li>
-          <li>Environmental Impact: By using solar, you're reducing reliance on fossil fuels and lowering greenhouse gas emissions which help combat climate change and protect the environment.</li>
-          <p>Geothermal Heat Pumps - These heat pumps use the ground as the source of heat. Since ground temperatures are mostly constant, these pumps are efficient and durable.</p>
-          <p>Benefits of Geothermal Heat Pumps:</p>
-          <li>Efficiency: Utilize the constant temperature of the ground to efficiently heat and cool your home or business year-round.</li>
-          <li>Durability: Geothermal heat pumps are built to last. They have fewer moving parts and less maintenance required compared to traditional heating and cooling systems.</li>
-          <li>Savings: Enjoy lower energy bills and reduced operating costs over the long term!</li>
-          <li>Environmental Friendliness: Reduce your carbon footprint and help protect the planet by choosing a sustainable heating and cooling solution</li>
-
         </div>
       </div>
     </section>
   </main>
-
 </body>
 
 </html>
