--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="paragraph-style-2">
           <p>Fossil fuels are the biggest contributors to global warming and pose threats to our planet. The resulting rise in global temperatures leads to severe weather effects such as melting ice caps, sea levels, and overall disruption of our ecosystems. However, through green energy initiatives, we can help reduce the effects of this global crisis. </p>
         </div>
-        <img class="fullscreen" src="https://get.pxhere.com/photo/landscape-tree-nature-forest-grass-outdoor-wilderness-grungy-mountain-cloud-plant-wood-fog-mist-field-meadow-sunlight-morning-leaf-hill-mountain-range-smoke-dark-green-autumn-weather-haze-grunge-trees-hills-grey-fields-hazy-misty-woodland-habitat-ecosystem-rural-area-oudoors-natural-environment-geographical-feature-atmospheric-phenomenon-woody-plant-mountainous-landforms-959049.jpg" alt="Pretty Pic">
+        <img class="image_fix" src="IMG_1048.jpg" alt="Pretty Pic">
         </div>
         <div class="wrapper_para2">
           <div class="heading-style-1">
