--- a/incentives-page.html
+++ b/incentives-page.html
@@ -30,7 +30,7 @@
 <body>
 
   <div class="header">
-    <img class="fullscreen" src="https://picsum.photos/id/1016/2000/1000" alt="Windmill Picture">
+    <img class="fullscreen" src="image-from-rawpixel-id-12458530-jpeg.jpg" alt="Windmill 2 Picture">
     <div class="header-right">
       <div class="wrapper">
         <a class="logo">WebmastersWeekly</a>
@@ -49,8 +49,10 @@
         <div class="heading-style-3">
           <h2>What can you do to help?</h2>
         </div>
+        <div>
         <div class="paragraph-style-2">
           <p>Ever wonder about how you can make a real impact on our environment? It’s time to take action and be part of the solution! Every effort counts towards fostering a sustainable and healthy planet.</p>
+          <img class="image_fix" src="IMG_1052.jpg" alt="Pretty Pic">
           <p>Start by incorporating simple yet effective energy-saving habits into your daily routine:</p>
           <li>turn off the lights when natural light is available</li>
           <li>conserve water</li>
@@ -61,6 +63,7 @@
           <li>ride a bike or switch to non-fossil-fuel-burning car</li>
           <p>Small changes like these can make a big difference in reducing your carbon footprint and saving energy.</p>
           </div>
+        </div>
         <div class="wrapper_para2">
         <div class="heading-style-2">
           <h2>You can take bigger initiatives and consider trying these options:</h2>
@@ -81,6 +84,7 @@
           <div class="heading-style-1">
           <h2>Geothermal Heat Pumps</h2>
           </div>
+          <img class="image_fill"src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Ge_netzeroenergyhome_0001.jpg" alt="Pretty Pic">
           <div class="paragraph-style-1">
             <p>These heat pumps use the ground as the source of heat. Since ground temperatures are mostly constant, these pumps are efficient and durable.</p>
             <p>Benefits of Geothermal Heat Pumps:</p>
