--- a/additional-info-page.html
+++ b/additional-info-page.html
@@ -53,7 +53,7 @@
           <p>Solar power</p>
           <p>Solar power presents an opportunity for homeowners to use clean, renewable energy while enjoying significant long-term savings.</p>
         </div>
-        <img class="fullscreen" src="https://get.pxhere.com/photo/landscape-tree-nature-forest-grass-outdoor-wilderness-grungy-mountain-cloud-plant-wood-fog-mist-field-meadow-sunlight-morning-leaf-hill-mountain-range-smoke-dark-green-autumn-weather-haze-grunge-trees-hills-grey-fields-hazy-misty-woodland-habitat-ecosystem-rural-area-oudoors-natural-environment-geographical-feature-atmospheric-phenomenon-woody-plant-mountainous-landforms-959049.jpg" alt="Pretty Pic">
+        <img class="fullscreen" src="https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcHgxMDg5NDkwLWltYWdlLWt3dndjeHczLmpwZw.jpg" alt="Pretty Pic">
         </div>
         <div class="wrapper_para2">
           <div class="heading-style-1">
