--- a/sources.html
+++ b/sources.html
@@ -68,6 +68,7 @@
           <p><a class="active" href="https://www.rawpixel.com/image/12458530/photo-image-cloud-plant-grass">rawpixel.com</a></p>
           <p><a class="active" href="https://www.rawpixel.com/image/3286220/free-photo-image-energy-bulb-cc0">rawpixel.com</a></p>
           <p><a class="active" href="https://upload.wikimedia.org/wikipedia/commons/d/d9/Ge_netzeroenergyhome_0001.jpg">wikimedia.org</a></p>
+          <p><a class="active" href="https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcHgxMDg5NDkwLWltYWdlLWt3dndjeHczLmpwZw.jpg">rawpixel.com</a></p>
         </div>
         </div>
 
