--- a/additional-info-page.html
+++ b/additional-info-page.html
@@ -77,7 +77,7 @@
             <p>While the upfront investment may seem steep, it's important to consider the long-term benefits.</p>
             <p>Geothermal heat pumps are highly efficient and utilize the stable temperature of the Earth to provide heating in the winter and cooling in the summer. This results in lower operating costs compared to traditional HVAC systems. With proper maintenance, geothermal heat pumps can last for decades, further enhancing their value.</p>
             <p>Additionally, homeowners may also qualify for state or local incentives, such as low-interest loans, further reducing the financial burden of installation. Beyond monetary savings, geothermal systems offer a more sustainable heating and cooling solution, reducing carbon emissions and lessening environmental impact. By leveraging available tax credits and incentives, homeowners can not only lower their energy bills but also contribute to a greener future while enjoying year-round comfort in their homes.</p>
-            <p>More information can be found on <a class="active" href="www.irs.gov">irs.gov</a></p>
+            <p>More information can be found on <a class="active" href="http://irs.gov">irs.gov</a></p>
         </div>
         </div>
       </div>
