--- a/sources.html
+++ b/sources.html
@@ -70,6 +70,7 @@
           <p><a class="active" href="https://upload.wikimedia.org/wikipedia/commons/d/d9/Ge_netzeroenergyhome_0001.jpg">wikimedia.org</a></p>
           <p><a class="active" href="https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcHgxMDg5NDkwLWltYWdlLWt3dndjeHczLmpwZw.jpg">rawpixel.com</a></p>
           <p>Here is our<a class="active" href="Technology-student-association-work-log.pdf">TSA worklog.</a></p>
+          <p>Here is our<a class="active" href="copyright-checklist.pdf">copyright checklist.</a></p>
         </div>
         </div>
 
